General AI Update. Bug Fixes.